# pulmo_v2

.github/workflows/: deploy-frontend.yml
backend/: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1b4f7323eb3c_add_final_diagnoses.py  2e93d86054a8_rename_enum_values_to_lowercase.py  50fd9030bd75_init_users_table.py  a66f327c15b2_extend_examinations_audio_parameters_.py  ab98583f79c1_add_ai_summary_column.py  c5e8f2a91b03_add_clinical_scale_examination_type.py  d4c08b1c5ceb_add_patients_and_examinations.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  examinations.py  files.py  final_diagnoses.py  patients.py
backend/app/core/: security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  examination.py  final_diagnosis.py  patient.py  user.py
backend/app/schemas/: admin.py  auth.py  examination.py  final_diagnosis.py  patient.py  user.py
backend/app/services/: admin.py  ai_claude.py  ai_common.py  ai_diagnosis.py  ai_final_diagnosis.py  ai_gemini.py  auth.py  bootstrap.py  clinical_scales.py  examination.py  final_diagnosis.py  patient.py  storage.py
backend/tests/: test_final_diagnosis_prompt.py  test_final_diagnosis_schemas.py
pulmoai_v2/: .firebaserc  .gitignore  README.md  angular.json  eslint.config.js  firebase.json  package-lock.json  package.json  tsconfig.json
pulmoai_v2/public/i18n/: en.json  ru.json  (+1 more)
pulmoai_v2/src/: index.html  styles.scss
(+76 files in other folders)
